[tool.poetry]
name = "grasp-hpo"
version = "0.1.0"
description = ""
authors = ["Gabriel Otsuka <gabrielotsuka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xgboost = "^2.0.1"
scikit-learn = "^1.3.2"
ray = "^2.7.1"
tune = "^0.1.5"
pandas = "^1.3.3"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
